--- a/whos-that-pokemon/index.html
+++ b/whos-that-pokemon/index.html
@@ -21,8 +21,8 @@
     <button class="inputValider"></button>
     <button class="inputSound"></button>
   </div>
-  <script src="../../../src/js/jquery.min.js"></script>
-  <script src="../../../src/js/howler.min.js"></script>
+  <script src="src/js/jquery.min.js"></script>
+  <script src="src/js/howler.min.js"></script>
   <script src="src/js/main.js"></script>
   <!-- http://livestats.fr - Outils de mesure d'audience en temps réel -->
   <script type="text/javascript" src="http://livestats.fr/counter.php?u=lunik"></script>
