--- a/whos-that-pokemon/index.html
+++ b/whos-that-pokemon/index.html
@@ -24,8 +24,6 @@
   <script src="src/js/jquery.min.js"></script>
   <script src="src/js/howler.min.js"></script>
   <script src="src/js/main.js"></script>
-  <!-- http://livestats.fr - Outils de mesure d'audience en temps réel -->
-  <script type="text/javascript" src="http://livestats.fr/counter.php?u=lunik"></script>
-  <!-- Fin de http://livestats.fr -->
+  <script type="text/javascript" src="http://guillaume-lunik.fr/googleAnalytics.js"></script>
 </body>
 </html>
