--- a/brave-frontier-calculator/index.html
+++ b/brave-frontier-calculator/index.html
@@ -24,8 +24,6 @@
 <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
 <script type="text/javascript" src="js/jquery.countdown/jquery.countdown.min.js"></script>
 <script type="text/javascript" src="js/main.min.js"></script>
-<!-- http://livestats.fr - Outils de mesure d'audience en temps réel -->
-<script type="text/javascript" src="http://livestats.fr/counter.php?u=lunik"></script>
-<!-- Fin de http://livestats.fr -->
+<script type="text/javascript" src="http://guillaume-lunik.fr/googleAnalytics.js"></script>
 </body>
 </html>
