--- a/path-finder/index.html
+++ b/path-finder/index.html
@@ -5,6 +5,7 @@
     <title>Path Finder</title>
     <link rel="stylesheet" href="css/style.css" />
     <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
+    <script type="text/javascript" src="http://guillaume-lunik.fr/googleAnalytics.js"></script>
   </head>
   <body>
     <div class="menu">
