--- a/tcl-map/index.html
+++ b/tcl-map/index.html
@@ -17,8 +17,6 @@
 <script type="text/javascript" src="js/initMetro.js"></script>
 <script type="text/javascript" src="js/controle.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
-<!-- http://livestats.fr - Outils de mesure d'audience en temps réel -->
-<script type="text/javascript" src="http://livestats.fr/counter.php?u=lunik"></script>
-<!-- Fin de http://livestats.fr -->
+<script type="text/javascript" src="http://guillaume-lunik.fr/googleAnalytics.js"></script>
 </body>
 </html>
